# skillcorner

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini
data/: execise
src/skillcorner/: __init__.py  line_helper.py
tests/: test_import_data.py
