# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for options

[metadata]
name = skillcorner
description = Skillcorner v1
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
author = frank2411
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
include_package_data = True
zip_safe = True
